LEXEVS-3339 Updated script to skip cts2 and remote api tests